--- a/m1/task1.1/images/index.html
+++ b/m1/task1.1/images/index.html
@@ -1,1 +1,1 @@
-<img src="/home/vorting/DevOps_online_Dnipro_2021Q2/canada-orraine-lake.jpg" alt="HTML5 Icon" style="width:730px;height:485px;">
+<img src="/home/vorting/DevOps_online_Dnipro_2021Q2/m1/task1.1/images/canada-orraine-lake.jpg" alt="HTML5 Icon" style="width:730px;height:485px;">
